# musica-core

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.mpi  Dockerfile.util  Dockerfile.util.mpi  Dockerfile.yaml  Dockerfile.yaml.mpi  Dockerfile.yaml.util  Dockerfile.yaml.util.mpi  README.md
.github/workflows/: test.yml
cmake/: dependencies.cmake
cmake/cmake-modules/: test_util.cmake
include/util/: config_yaml.h  config_yaml.hpp
packaging/: CMakeLists.txt
src/: CMakeLists.txt  component.F90  component_set.F90  config.F90  domain.F90  domain_iterator.F90  domain_state.F90  domain_state_accessor.F90  domain_state_mutator.F90  domain_target_cells.F90  domain_target_columns.F90  domain_target_model_top_cells.F90  domain_target_surface_cells.F90  evolving_conditions.F90  grid.F90  initial_conditions.F90  property.F90  property_set.F90
src/domains/: CMakeLists.txt  cell.F90
src/input_output/: CMakeLists.txt  file.F90  file_dimension.F90  file_dimension_range.F90  file_paired_variable.F90  file_updater.F90  file_util.F90  file_variable.F90  file_variable_factory.F90  input_output_processor.F90
src/input_output/file_dimensions/: CMakeLists.txt  netcdf.F90  text.F90
src/input_output/file_variables/: CMakeLists.txt  netcdf.F90
src/input_output/files/: netcdf.F90  text.F90
src/interpolator_strategies/: CMakeLists.txt  binned_mass.F90  linear_1D.F90
src/lookup/: CMakeLists.txt
src/util/: CMakeLists.txt  array.F90  config.F90  config_json.F90  config_yaml.F90  config_yaml.c  config_yaml.cpp  convert.F90  io.F90  property.F90  property_set.F90  string.F90  target.F90  yaml_util.F90
src/util/io/: CMakeLists.txt  netcdf.F90
test/: CMakeLists.txt  config.F90  grid.F90  initial_conditions.F90  interpolator.F90  property.F90  property_set.F90  property_set.sh  valgrind.supp
test/data/: file_util_test_data.nc
test/domains/: CMakeLists.txt
test/input_output/: file_util.F90
test/interpolator_strategies/: CMakeLists.txt  binned_mass.F90  linear_1D.F90
test/lookup/: 2D_axis.F90  CMakeLists.txt  axis.sh
test/util/: CMakeLists.txt  array.F90  assert.sh  config.F90  convert.F90  datetime.F90  map.F90  map.sh  string.sh
test/util/io/: CMakeLists.txt  netcdf.F90
